--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <p>
                 <img src="imagens/o-email.png" alt="E-mail">E-mail: itamardmanutencao@gmail.com
             </p>
-            <p>&copy; 2024 Itamar Dutra - Técnico em Eletrodomésticos</p>
+            <p>&copy; 2024 Itamar EletroHelp - Técnico em Eletrodomésticos</p>
         </div>
     </footer>
 
