--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" id="menu-toggle">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <img src="imagens/icons8-cardápio-32.png" alt="Menu">
                 </button>
             </div>
             <div class="navbar-menu" id="navbar-menu">
@@ -32,10 +30,9 @@
         </div>
     </nav>
 
-    <header>
+    <header class="cabecalho">
         <img src="imagens/maquinabrastemp-fot-painel.webp" alt="Eletrodomésticos">
         <h1 class="nome-empresa">ITAMAR ELETROHELP</h1>
-
     </header>
 
     <section id="sobre">
@@ -189,7 +186,7 @@
             <p>
                 <img src="imagens/o-email.png" alt="E-mail">E-mail: itamardmanutencao@gmail.com
             </p>
-            <p>&copy; 2024 Itamar EletroHelp - Técnico em Eletrodomésticos</p>
+            <p>&copy; 2024 Itamar Dutra - Técnico em Eletrodomésticos</p>
         </div>
     </footer>
 
