--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" id="menu-toggle">
-                    <img src="imagens/icons8-cardápio-32.png" alt="Menu">
+                    <img src="imagens/cardapio (2).png" alt="Menu">
                 </button>
             </div>
             <div class="navbar-menu" id="navbar-menu">
@@ -31,8 +31,9 @@
     </nav>
 
     <header class="cabecalho">
+        <h1 class="nome-empresa">ITAMAR DUTRA - TÉCNICO EM ELETRODOMÉSTICO</h1>
+
         <img src="imagens/maquinabrastemp-fot-painel.webp" alt="Eletrodomésticos">
-        <h1 class="nome-empresa">ITAMAR ELETROHELP</h1>
     </header>
 
     <section id="sobre">
@@ -56,7 +57,7 @@
             <di class="container-limpeza">
                 <h2 class="servicos-subtitulo">Higienização de máquinas de lavar</h2>
 
-                <p>A higienização da máquina de lavar roupa é fundamental por várias razões:
+                <p class="texto-higienizacao">A higienização da máquina de lavar roupa é fundamental por várias razões:
                 <ul>
                     <li><strong> Evita odores ruins:</strong> Acúmulo de sujeira, sabão e restos de tecido podem causar
                         mau
