--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <header class="cabecalho">
-        <h1 class="nome-empresa">ITAMAR DUTRA - TÉCNICO EM ELETRODOMÉSTICO</h1>
+        <h1 class="nome-empresa">ITAMAR ELETROHELP</h1>
 
         <img src="imagens/maquinabrastemp-fot-painel.webp" alt="Eletrodomésticos">
     </header>
