--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <section id="beneficios">
         <div>
-            <h2 class="titulo">Benefícios</h2>
+            <h2 class="titulo">BENEFÍCIOS</h2>
             <ul>
                 <li>Atendimento personalizado</li>
                 <li>Serviços de alta qualidade</li>
