Ajuste no navbar

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
     </nav>
 
-    <header class="cabecalho">
+    <header class="header" id="header-img">
         <h1 class="nome-empresa">ITAMAR ELETROHELP</h1>
 
-        <img src="imagens/maquinabrastemp-fot-painel.webp" alt="Eletrodomésticos">
+        <!-- <img src="imagens/maquinabrastemp-fot-painel.webp" alt="Eletrodomésticos"> -->
     </header>
 
     <section id="sobre">
