ajustes nas sections

--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
             <div class="navbar-menu" id="navbar-menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#beneficios">Benefícios</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#benefits">Benefícios</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <header class="header" id="header-img">
-        <h1 class="nome-empresa">ITAMAR ELETROHELP</h1>
+        <h1>ITAMAR ELETROHELP</h1>
 
         <!-- <img src="imagens/maquinabrastemp-fot-painel.webp" alt="Eletrodomésticos"> -->
     </header>
 
     <main>
-        <div class="container">
+        <div class="container-main">
             <section id="sobre">
                 <div>
                     <h2 class="titulo">SOBRE</h2>
@@ -48,34 +48,37 @@
                         necessidades de nossos clientes. Valorizamos a transparência, integridade e excelência em tudo o
                         que
                         fazemos, garantindo que cada cliente receba o melhor serviço possível. Estamos aqui para ajudar
-                        a
-                        manter
+                        a manter
                         seus eletrodomésticos funcionando perfeitamente e para fornecer soluções que atendam às suas
                         necessidades. Conte conosco para um serviço confiável e profissional.</p>
                 </div>
             </section>
+
             <section id="servicos">
-                <div class="container-servicos">
+                <div class="container">
                     <h2 class="titulo">SERVIÇOS</h2>
+
                     <di class="container-limpeza">
                         <h2 class="servicos-subtitulo">Higienização de máquinas de lavar</h2>
-                        <p class="texto-higienizacao">A higienização da máquina de lavar roupa é fundamental por várias
+
+                        <p class="texto-higienizacao">A higienização da máquina de lavar roupa é fundamental por
+                            várias
                             razões:
                         <ul>
-                            <li><strong> Evita odores ruins:</strong> Acúmulo de sujeira, sabão e restos de tecido podem
+                            <li><strong> Evita odores ruins:</strong> Acúmulo de sujeira, sabão e restos de tecido
+                                podem
                                 causar
                                 mau
                                 cheiro nas roupas;</li>
                             <li><strong>Impede a proliferação de germes:</strong> A umidade dentro da máquina pode
-                                favorecer
-                                o
-                                crescimento de bactérias e fungos, que podem contaminar as roupas e afetar a saúde;</li>
+                                favorecer o
+                                crescimento de bactérias e fungos, que podem contaminar as roupas e afetar a saúde;
+                            </li>
                             <li> <strong>Mantém a eficiência:</strong> Resíduos podem prejudicar o funcionamento da
                                 máquina,
                                 tornando-a menos eficaz na lavagem;</li>
                             <li> <strong>Protege as roupas:</strong> Uma máquina suja pode transferir sujeira e
-                                bactérias
-                                para
+                                bactérias para
                                 as
                                 roupas, danificando-as;</li>
                         </ul>
@@ -89,66 +92,94 @@
                         </div>
 
                     </di>
+
                     <div class="container-limpeza-profunda">
-                        <h3 class="subtitulo-limpeza-profunda">Limpeza profunda</h3>
-                        <p class="limpeza-profunda-texto">Pode ser necessário contratar um profissional para uma limpeza
+                        <h3>Limpeza profunda</h3>
+                        <p class="limpeza-profunda-texto">Pode ser necessário contratar um profissional para uma
+                            limpeza
                             mais profunda
                             da máquina. Esse serviço
-                            especializado pode remover depósitos de sujeira e resíduos difíceis de alcançar, garantindo
+                            especializado pode remover depósitos de sujeira e resíduos difíceis de alcançar,
+                            garantindo
                             uma
                             limpeza
-                            completa e prolongando a vida útil do aparelho. É uma medida recomendável especialmente se a
+                            completa e prolongando a vida útil do aparelho. É uma medida recomendável especialmente
+                            se a
                             máquina
                             apresentar sinais de mau funcionamento ou acumulação excessiva de sujeira.
                             Recomenda-se fazer essa <strong>limpeza profunda a cada seis meses a um ano.</strong> No
                             entanto, se
-                            você perceber sinais de mau funcionamento, como odores persistentes, resíduos visíveis ou
+                            você perceber sinais de mau funcionamento, como odores persistentes, resíduos visíveis
+                            ou
                             problemas
                             na
                             lavagem das roupas, pode ser necessário fazer essa limpeza com mais frequência.
                         </p>
                     </div>
+
                     <div class="container-conserto">
                         <div class="container-maquina">
                             <h3 class="servicos-subtitulo-maquina">Conserto de Máquinas de Lavar</h3>
-                            <img class="imagem-brastemp" src="imagens/maquina-brastemp-foto-inteira.jpg">
-                            <p>Marcas:</p>
-                            <ul class="maquinadelavar">
-                                <li>Brastemp</li>
-                                <li>Cônsul Facilite</li>
-                                <li>Electrolux</li>
-                            </ul>
+                            <div class="container-maquina-content">
+                                <div>
+                                    <img class="imagem-brastemp" src="imagens/maquina-brastemp-foto-inteira.jpg">
+                                </div>
+                                <div>
+                                    <p>Marcas:</p>
+                                    <ul class="maquinadelavar">
+                                        <li>Brastemp</li>
+                                        <li>Cônsul Facilite</li>
+                                        <li>Electrolux</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
+
                         <div class="container-lavaeseca">
                             <h3 class="servicos-subtitulo-lavaeseca">Conserto de Máquina Lava e Seca</h3>
-                            <img class="imagem-lavaeseca" src="imagens/lavaeseca.jpg"
-                                alt="Conserto de máquina de lava e seca">
-                            <p>Marcas:</p>
-                            <ul class="lavaeseca">
-                                <li>Brastemp</li>
-                                <li>Electrolux</li>
-                                <li>LG</li>
-                                <li>Samsung</li>
-                            </ul>
+                            <div class="container-maquina-content">
+
+                                <div>
+                                    <p>Marcas:</p>
+                                    <ul class="lavaeseca">
+                                        <li>Brastemp</li>
+                                        <li>Electrolux</li>
+                                        <li>LG</li>
+                                        <li>Samsung</li>
+                                    </ul>
+                                </div>
+
+                                <div>
+                                    <img class="imagem-lavaeseca" src="imagens/lavaeseca.jpg"
+                                        alt="Conserto de máquina de lava e seca">
+                                </div>
+                            </div>
                         </div>
                         <section>
                             <div class="container-microondas">
                                 <h3 class="servicos-subtitulo-microondas">Conserto de Micro-ondas</h3>
-                                <img class="imagem-microondas" src="imagens/microondas...webp"
-                                    alt="Conserto de micro-ondas">
-                                <p>Marcas:</p>
-                                <ul class="micro-ondas">
-                                    <li>Brastemp</li>
-                                    <li>Electrolux</li>
-                                    <li>LG</li>
-                                    <li>Midea</li>
-                                    <li>Philco</li>
-                                    <li>Samsung</li>
-                                </ul>
+                                <div class="container-maquina-content">
+                                    <div>
+                                        <img class="imagem-microondas" src="imagens/microondas...webp"
+                                            alt="Conserto de micro-ondas">
+                                    </div>
+                                    <div>
+                                        <p>Marcas:</p>
+                                        <ul class="micro-ondas">
+                                            <li>Brastemp</li>
+                                            <li>Electrolux</li>
+                                            <li>LG</li>
+                                            <li>Midea</li>
+                                            <li>Philco</li>
+                                            <li>Samsung</li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </section>
                     </div>
             </section>
+
             <section id="beneficios">
                 <div>
                     <h2 class="titulo">BENEFÍCIOS</h2>
@@ -160,6 +191,7 @@
                     </ul>
                 </div>
             </section>
+
             <div class="serviços-container-vendas">
                 <h2>Nossos Produtos em Destaque</h2>
                 <ul>
@@ -172,20 +204,21 @@
                 </ul>
                 <p>Para mais informações sobre modelos disponíveis e promoções vigentes, entre em contato conosco.</p>
             </div>
-        </div>
-        </section>
-        <section id="contato">
-            <div>
-                <h2 class="titulo">CONTATO</h2>
-                <form id="contatoForm">
-                    <input type="text" id="name" name="name" placeholder="Seu nome" required>
-                    <input type="tel" id="tel" name="Telefone" placeholder="Seu Telefone" required>
-                    <input type="email" id="email" name="email" placeholder="Seu E-mail" required>
-                    <textarea id="message" name="message" placeholder="Sua Mensagem"></textarea>
-                    <button type="submit">Enviar</button>
-                </form>
-            </div>
-        </section>
+
+            </section>
+
+            <section id="contato">
+                <div class="contato-container">
+                    <h2 class="titulo">CONTATO</h2>
+                    <form id="contatoForm">
+                        <input type="text" id="name" name="name" placeholder="Seu nome" required>
+                        <input type="tel" id="tel" name="Telefone" placeholder="Seu Telefone" required>
+                        <input type="email" id="email" name="email" placeholder="Seu E-mail" required>
+                        <textarea id="message" name="message" placeholder="Sua Mensagem"></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+            </section>
         </div>
     </main>
 
