Feito o scroll suave

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar js-menu">
         <div class="container-navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" id="menu-toggle">
@@ -20,11 +20,11 @@
             </div>
             <div class="navbar-menu" id="navbar-menu">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#benefits">Benefícios</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="#header-img">Home</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#beneficios">Benefícios</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </div>
         </div>
@@ -61,7 +61,7 @@
                     <di class="container-limpeza">
                         <h2 class="servicos-subtitulo">Higienização de máquinas de lavar</h2>
 
-                        <p class="texto-higienizacao">A higienização da máquina de lavar roupa é fundamental por
+                        <p>A higienização da máquina de lavar roupa é fundamental por
                             várias
                             razões:
                         <ul>
