--- a/index.html
+++ b/index.html
@@ -193,33 +193,38 @@
             </section>
 
             <div class="serviços-container-vendas">
-                <h2>Nossos Produtos em Destaque</h2>
-                <ul>
-                    <li><strong>Máquinas de Lavar Roupa:</strong> Conheça nossa variedade de máquinas de lavar roupa,
-                        ideais para atender às suas necessidades de lavagem de roupas.</li>
-                    <li><strong>Máquinas de Lava e Seca:</strong> Descubra a conveniência das máquinas de lava e seca,
-                        que combinam lavagem e secagem em um único aparelho.</li>
-                    <li><strong>Micro-ondas:</strong> Explore nossa seleção de micro-ondas, perfeitos para preparar
-                        refeições rapidamente e com praticidade.</li>
-                </ul>
-                <p>Para mais informações sobre modelos disponíveis e promoções vigentes, entre em contato conosco.</p>
-            </div>
-
-            </section>
-
-            <section id="contato">
-                <div class="contato-container">
-                    <h2 class="titulo">CONTATO</h2>
-                    <form id="contatoForm">
-                        <input type="text" id="name" name="name" placeholder="Seu nome" required>
-                        <input type="tel" id="tel" name="Telefone" placeholder="Seu Telefone" required>
-                        <input type="email" id="email" name="email" placeholder="Seu E-mail" required>
-                        <textarea id="message" name="message" placeholder="Sua Mensagem"></textarea>
-                        <button type="submit">Enviar</button>
-                    </form>
+                <div>
+                    <h2>Nossos Produtos em Destaque</h2>
+                    <ul>
+                        <li><strong>Máquinas de Lavar Roupa:</strong> Conheça nossa variedade de máquinas de lavar
+                            roupa,
+                            ideais para atender às suas necessidades de lavagem de roupas.</li>
+                        <li><strong>Máquinas de Lava e Seca:</strong> Descubra a conveniência das máquinas de lava e
+                            seca,
+                            que combinam lavagem e secagem em um único aparelho.</li>
+                        <li><strong>Micro-ondas:</strong> Explore nossa seleção de micro-ondas, perfeitos para preparar
+                            refeições rapidamente e com praticidade.</li>
+                    </ul>
+                    <p>Para mais informações sobre modelos disponíveis e promoções vigentes, entre em contato conosco.
+                    </p>
                 </div>
-            </section>
+            </div>
         </div>
+        </section>
+
+        <section id="contato">
+            <div class="contato-container">
+                <h2 class="titulo">CONTATO</h2>
+                <form id="contatoForm">
+                    <input type="text" id="name" name="name" placeholder="Seu nome" required>
+                    <input type="tel" id="tel" name="Telefone" placeholder="Seu Telefone" required>
+                    <input type="email" id="email" name="email" placeholder="Seu E-mail" required>
+                    <textarea id="message" name="message" placeholder="Sua Mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+        </section>
+
     </main>
 
     <footer class="rodape">
