Ajuste no nome da empesa

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
-    <title>Itamar EletroHelp</title>
+    <title>Itamar Máquinas</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     </nav>
 
     <header class="header" id="header-img">
-        <h1>ITAMAR ELETROHELP</h1>
+        <h1>ITAMAR MÁQUINAS</h1>
     </header>
 
     <main>
@@ -246,7 +246,7 @@
                 <img class="icone" src="imagens/o-email.png" alt="E-mail">
                 E-mail: itamardmanutencao@gmail.com
             </p>
-            <p>&copy; 2024 Itamar EletroHelp - Técnico em Eletrodomésticos</p>
+            <p>&copy; 2024 Itamar Máquinas - Técnico em Eletrodomésticos</p>
         </div>
     </footer>
     
